# uneven_planner

./: .gitignore  LICENSE  README.md  desert.sh  forest.sh  hill.sh  mountain.sh  volcano.sh
src/carsim/: CMakeLists.txt  package.xml
src/carsim/config/: config.rviz  controller_config.yaml
src/carsim/launch/: spawn_car.launch
src/carsim/meshes/: left_steering_hinge.STL
src/carsim/models/forest_additions/bush01/: model.config  model.sdf
src/carsim/models/forest_additions/bush02/: model.config  model.sdf
src/carsim/models/forest_additions/bush03/: model.config  model.sdf
src/carsim/models/forest_additions/terrain/: forest_terrain.dae  model.config  model.sdf
src/carsim/models/forest_additions/tree02/: model.config  model.sdf
src/carsim/models/map_desert/: model-1_4.sdf  model.config
src/carsim/models/map_desert/materials/scripts/: map.material
src/carsim/models/map_desert/meshes/: map_desert.dae
src/carsim/models/map_forest/: model-1_4.sdf  model.config
src/carsim/models/map_forest/materials/scripts/: map.material
src/carsim/models/map_hill/: model-1_4.sdf  model.config
src/carsim/models/map_hill/materials/scripts/: map.material
src/carsim/models/map_mountain/: model-1_4.sdf  model.config
src/carsim/models/map_mountain/materials/scripts/: map.material
src/carsim/models/map_snow/: model-1_4.sdf  model.config
src/carsim/models/map_snow/materials/scripts/: map.material
src/carsim/models/map_vocano/: model-1_4.sdf  model.config
src/carsim/models/map_vocano/materials/scripts/: map.material
src/carsim/scripts/: cmdvel2gazebo.py  keyboard_control.py  true_state_pub.py  world_tf_pub.py
src/carsim/src/: searchForSetPoint.cpp
src/carsim/urdf/: car_model_description.xacro  macros.xacro  racecar.gazebo
src/carsim/worlds/: map_desert.world  map_forest.world  map_hill.world  map_mountain.world  map_real.world  map_snow.world  map_vocano.world
src/uneven_planner/back_end/: CMakeLists.txt  package.xml
src/uneven_planner/back_end/include/back_end/: alm_traj_opt.h
src/uneven_planner/back_end/include/utils/: banded_system.hpp  lbfgs.hpp  se2traj.hpp
src/uneven_planner/back_end/src/: alm_traj_opt.cpp  back_end_node.cpp
src/uneven_planner/front_end/: CMakeLists.txt  package.xml
src/uneven_planner/front_end/include/front_end/: kino_astar.h
src/uneven_planner/front_end/src/: front_end_node.cpp  kino_astar.cpp
src/uneven_planner/mpc_controller/: CMakeLists.txt  README.md  package.xml
src/uneven_planner/mpc_controller/include/mpc/: mpc.h
src/uneven_planner/mpc_controller/include/utils/: minco_traj.hpp  traj_anal.hpp
src/uneven_planner/mpc_controller/launch/: run_mpc.launch
src/uneven_planner/mpc_controller/msg/: SE2Traj.msg
src/uneven_planner/mpc_controller/src/: mpc.cpp  mpc_node.cpp
src/uneven_planner/plan_manager/: CMakeLists.txt  package.xml
src/uneven_planner/plan_manager/include/plan_manager/: plan_manager.h
src/uneven_planner/plan_manager/launch/: run_all.launch  run_desert.launch  run_forest.launch  run_hill.launch  run_mountain.launch  run_vocano.launch
src/uneven_planner/plan_manager/params/: run_all.yaml  run_forest.yaml  run_mountain.yaml  run_vocano.yaml
src/uneven_planner/plan_manager/rviz/: default.rviz
src/uneven_planner/plan_manager/src/: manager_node.cpp  plan_manager.cpp
src/uneven_planner/uneven_map/: CMakeLists.txt  package.xml
src/uneven_planner/uneven_map/include/uneven_map/: uneven_map.h
src/uneven_planner/uneven_map/maps/: .gitignore  desert.pcd  forest.pcd  mountain.pcd  to_pcl.py  vocano.pcd
src/uneven_planner/uneven_map/rviz/: default.rviz
src/uneven_planner/uneven_map/src/: uneven_map.cpp  uneven_map_node.cpp
