<?xml version="1.0"?>
<package format="2">
  <name>plan_manager</name>
  <version>0.0.1</version>
  <description>a plan manager package</description>

  <maintainer email="xulon666@gmail.com">xulong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>uneven_map</build_depend>
  <build_depend>front_end</build_depend>
  <build_depend>back_end</build_depend>
  <build_depend>mpc_controller</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>uneven_map</exec_depend>
  <exec_depend>front_end</exec_depend>
  <exec_depend>back_end</exec_depend>
  <exec_depend>mpc_controller</exec_depend>

</package>
